Use J21 features